# TimeTrackerOnQt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.cbb8169  MessageBoxHelper.h  README.md  StopWatchResources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageboxhelper.cpp  messageboxhelper.h  resources.qrc
Kanban/: CMakeLists.txt  Kanban.qrc  kanban.cpp  kanban.h  kanban.ui  main.cpp  taskcard.cpp  taskcard.h
Reminder/: CMakeLists.txt  Reminder.qrc  main.cpp  notificationmanager.cpp  notificationmanager.h  notificationmanager.ui  reminder.cpp  reminder.h  reminder.ui  reminder.ui.autosave
StopWatch/: CMakeLists.txt  stopwatch.cpp  stopwatch.h  stopwatch.ui
Timer/: CMakeLists.txt  Timer.qrc  timer.cpp  timer.h  timer.ui  timeron.cpp  timeron.h  timeron.ui  timeron.ui.autosave
saved_results/: reminder_saveresults.txt  stopwatch_savedresults.txt
